# sht1x-java

./: .gitignore  Makefile  Makefile.am  Makefile.orig  README.md  Sht1xSensor.c  Sht1xSensor.h  configure.ac
